# libspaces

./: CMakeLists.txt  README.md  env-linux.txt  env.cmd  spaces-0.3-1.rockspec  spaces-0.3-10.rockspec  spaces-0.3-4.rockspec  spaces-0.4-0.rockspec
docs/: API.md  BENCHMARKS.md  EXAMPLES.md  TUTORIAL.md
repo/lz4-r101/: WhatsNew.txt  lz4c.c
repo/rabbit/: rabbit_map.h
spaces/: dllmain.cpp  spaces.vcxproj  spaces.vcxproj.filters  stdafx.cpp  test.lua
src/: abstracted_storage.cpp  abstracted_storage.h  journal.cpp  pool.cpp  transactional_storage.cpp  transactional_storage.h
src/examples/: benchmark.lua  cities.lua  client.lua  inspect_meta.lua  packages.lua  server.lua  tutorial.lua
src/examples/benchmark/: benchmark.lua
src/examples/cities/: cities.lua
src/examples/search/: cosinesimilarity.lua  glove.lua  hsmallworld.lua  levenshtein.lua  leventy.lua  search.lua  smallworld.lua
src/examples/server/: client.lua
src/examples/tutorial/: tutorial.lua
src/helper/: lua_xt.h
src/poco-1.4.6p1-all/: components
src/poco-1.4.6p1-all/Data/MySQL/obj64/debug_static_md/: MySQL.lastbuildstate
src/poco-1.4.6p1-all/Data/MySQL/obj64/debug_static_mt/: MySQL.lastbuildstate
src/poco-1.4.6p1-all/Data/MySQL/obj64/release_static_md/: MySQL.lastbuildstate
src/poco-1.4.6p1-all/Data/MySQL/obj64/release_static_mt/: MySQL.lastbuildstate
src/poco-1.4.6p1-all/Data/ODBC/obj64/debug_static_mt/: ODBC.lastbuildstate
src/poco-1.4.6p1-all/Data/ODBC/obj64/release_static_mt/: ODBC.lastbuildstate
src/poco-1.4.6p1-all/Data/ODBC/testsuite/obj64/debug_static_md/: TestSuite.lastbuildstate
src/poco-1.4.6p1-all/Data/ODBC/testsuite/obj64/release_static_md/: TestSuite.lastbuildstate
src/poco-1.4.6p1-all/Data/SQLite/: mysqld.psess
src/poco-1.4.6p1-all/Data/SQLite/include/Poco/Data/SQLite/: Connector.h
src/poco-1.4.6p1-all/Data/SQLite/src/: SQLiteConnector.cpp
src/poco-1.4.6p1-all/Data/include/Poco/Data/: BLOB.h  StatementImpl.h
src/poco-1.4.6p1-all/Data/src/: BLOB.cpp  StatementImpl.cpp
src/poco-1.4.6p1-all/Foundation/include/Poco/: AbstractCache.h  Config.h  DeflatingStream.h  DynamicFactory.h  EventLogChannel.h  InflatingStream.h  LRUStrategy.h  Process.h  Process_UNIX.h  Process_VMS.h  RWLock.h  RWLock_Android.h  RWLock_POSIX.h  RWLock_VX.h  ScopedLock.h  Semaphore.h  Semaphore_POSIX.h  Semaphore_VX.h  SharedLibrary_HPUX.h  SharedLibrary_VX.h  Task.h  Thread.h  Thread_POSIX.h  Thread_VX.h  Thread_WINCE.h  UUID.h  WindowsConsoleChannel.h  thread_win32.h
src/poco-1.4.6p1-all/Foundation/src/: Checksum.cpp  DirectoryIterator.cpp  DirectoryIterator_UNIX.cpp  DirectoryIterator_VMS.cpp  DirectoryIterator_WIN32.cpp  DirectoryIterator_WIN32U.cpp  Environment.cpp  Environment_UNIX.cpp  Environment_VMS.cpp  Environment_VX.cpp  Environment_WIN32.cpp  Environment_WIN32U.cpp  Environment_WINCE.cpp  Event.cpp  EventLogChannel.cpp  Event_POSIX.cpp  Event_VX.cpp  Event_WIN32.cpp  FPEnvironment.cpp  FPEnvironment_C99.cpp  FPEnvironment_DEC.cpp  FPEnvironment_DUMMY.cpp  FPEnvironment_SUN.cpp  FPEnvironment_WIN32.cpp  File.cpp  FileStream.cpp  FileStream_POSIX.cpp  FileStream_WIN32.cpp  File_UNIX.cpp  File_VMS.cpp  File_VX.cpp  File_WIN32.cpp  File_WIN32U.cpp  File_WINCE.cpp  HashStatistic.cpp  LogFile.cpp  LogFile_STD.cpp  LogFile_VMS.cpp  LogFile_WIN32.cpp  LogFile_WIN32U.cpp  (+82 more)
src/poco-1.4.6p1-all/Net/include/Poco/Net/: TCPServerConnectionFactory.h
src/poco-1.4.6p1-all/PageCompiler/File2Page/obj64/debug_static_md/: File2Page.lastbuildstate
src/poco-1.4.6p1-all/PageCompiler/File2Page/obj64/debug_static_mt/: File2Page.lastbuildstate
src/poco-1.4.6p1-all/PageCompiler/File2Page/obj64/release_static_md/: File2Page.lastbuildstate
src/poco-1.4.6p1-all/PageCompiler/File2Page/obj64/release_static_mt/: File2Page.lastbuildstate
src/poco-1.4.6p1-all/Util/include/Poco/Util/: AbstractConfiguration.h
src/repo/lz4-r101/: fullbench.c  lz4c.c
src/repo/rabbit/include/rabbit/: rabbit_map.h  unordered_map  unordered_set
src/repo/rpclib/: CMakeLists.txt
src/repo/rpclib/include/rpc/detail/: async_writer.h  server_session.h
src/repo/rpclib/lib/rpc/: client.cc  server.cc
src/repo/rpclib/lib/rpc/detail/: server_session.cc
src/storage/interface/: lua_xt.h  space_lua.h  spaces_lua.cpp  spaces_session.h  trash.h
src/storage/network/: replication.cpp  replication.h
src/storage/spaces/: data_type.h  dbms.cpp  dbms.h  key.h  space_lua.h  space_pair.h  spaces.cpp  spaces_dep.h  spaces_lua.cpp
src/storage/transactions/: NotificationQueueWorker.h  abstracted_storage.cpp  abstracted_storage.h  allocator_test.h  journal.cpp  pool.cpp  system_timers.h  transactional_storage.cpp  transactional_storage.h
src/stx/: btree.cpp  btree.h  btree_map.h  btree_multimap.h  btree_multiset.h  btree_rev__A.h  btree_rev__B.h  btree_set.h
src/stx/storage/: basic_storage.h  leb128.h  pool.cpp  pool.h  types.h
src/tests/: client.lua  env-rel.cmd  env.cmd  inspect.lua  iterators.lua  jsonp.lua  offsets.lua  packages.lua  ranges.lua  server.lua  smallworld.lua  table_inspect.lua  tables.lua  test.lua  test2.lua  transactions.lua
